dropdown not works bug fixed, scrollbar overflow fixed

--- a/flask/static/master.css
+++ b/flask/static/master.css
@@ -14,7 +14,7 @@ body {
   background-color: #262624;#333;
   position : fixed;
   top: 0;
-  width : 100vw;
+  width : 100%;
   height: 5.0rem;
   z-index: 1;
   display: inline-block;
@@ -56,7 +56,7 @@ body {
   display: flex;
   justify-content: left;
   align-items: center;
-  width : 100vw;
+  width : 100%;
   height: 5.0rem;
   align-self: center;
 }
@@ -132,14 +132,10 @@ p,h3{
   margin-bottom: 1px;
 }
 .dropdown_list {
-  position: fixed;
-  right: 0px;
-  float: left;
-  overflow: hidden;
-  order: 2;
-  border: 1px solid #d7d8cd;
-  border-radius: 5px;
-  margin-bottom: 5px;
+    float: left;
+    overflow: hidden;
+    order: 2;
+    margin-left: auto;
 }
 
 .menu2{
@@ -185,14 +181,15 @@ button::-moz-focus-inner {
 }
 
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  align-self: left;
-  border: 1px solid black;
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    align-self: left;
+    border: 1px solid black;
+    font-family: inherit;
 }
 
 .show {
